style.css
/* ... */
#menu #volume::-webkit-slider-runnable-track {
  width: 100%;
  height: 6px;
  cursor: pointer;

  background: #ccc;
  border: 1px solid rgba(0,0,0,0.1);
  border-radius: 4px;
}


#menu #light {
	position: absolute;
	left: 10px;
	top: 45px;
	background: #dedede;
	height: 65px;
	width: 26px;
	border: 1px solid rgba(0,0,0,0.1);
	box-sizing: border-box;
	padding: 3px;
	border-radius: 100px;
	cursor: pointer;
}
#menu #light.dark > .pointer {
	background: #333;
	top: 32px;
}
#menu #light .pointer {
	width: 18px;
	height: 18px;
	background: white;
	border-radius: 100%;
	transition: all 0.5s;
	position: relative;
	top: 0px;
	border: 1px solid rgba(0,0,0,0.3);
	box-sizing: border-box;
}


#menu #quality {
	position: absolute;
	left: 50px;
	top: 40px;
	width: 45px;
	height: initial;
}
#menu #quality div {
	display: block;
	width: 100%;
	height: initial;
	padding: 1px 10px;
	font-size: 12px;
	background: #ddd;
	margin: 3px;
	border: 1px solid rgba(0,0,0,0.05);
	border-radius: 100px;
	font-weight: 300;
	transition: all 0.5s;
	cursor: pointer;
}
#menu #quality div.active {
	background: #2980b9;
	color: white;
}







#chat {
	width: 230px;
	height: 22px;
	position: fixed;
	background: white;
	bottom: 10px;
	right: 10px;
	box-shadow: 0px 0px 50px rgba(0,0,0,0.35);
	border-radius: 4px;
	padding: 10px;
	transition: all 0.5s;
	text-align: center;
	overflow: hidden;
	z-index: 100;
}
#chat.active {
	height: 400px;
}
#chat.big {
	width: 270px;
}
#chat.big.active {
	height: 500px;
}
#chat .header {
	margin: -10px;
	padding: 10px;
	color: white;
	background: #2c3e50;
	cursor: pointer;
	z-index: 10;
	position: relative;
	box-sizing: border-box;
}
#chat.active .header {margin-bottom: 10px;}
#chat .header .new {
	position: absolute;
	left: 10px;
	top: calc(50% - 12px);
	border-radius: 200px;
	background: #8e44ad;
	width: 25px;
	height: 25px;
	line-height: 2.2;
	font-size: 11px;
	display: none;
}
#chat .header .setup {
	position: absolute;
	width: 20px;
	height: 20px;
	right: 15px;
	top: calc(50% - 10px);
	background-repeat: no-repeat;
	background-size: cover;
	background-position: center;
	background-image: url("img/setup.png");
	cursor: pointer;
	transition: all 0.5s;
}
#chat .header .setup:hover {
	transform: scale(1.25);
}

#chat .header .big {
	position: absolute;
	width: 15px;
	height: 15px;
	right: 45px;
	top: calc(50% - 12px);
	background-repeat: no-repeat;
	background-size: contain;
	background-position: center;
	background-image: url("img/big.png");
	cursor: pointer;
	transition: all 0.5s;
	opacity: 0.1;
	padding: 5px 10px;
	border-radius: 3px;
}
#chat .header .big:hover {
	transform: scale(1.25);
}
#chat .header .big.select {
	opacity: 1;
	background-color: rgba(255,255,255,0.1);
}

#chat .messages {
	height: calc(100% - 70px);
	background: #f5f5f5;
	border: 1px solid rgba(0,0,0,0.1);
	border-bottom: none;
	overflow: auto;
	overflow-x: hidden;
	color: #333;
}
#chat .messages div {
	padding: 5px;
	border-bottom: 1px solid rgba(0,0,0,0.05);
	margin-top: 1px;
	text-align: left;
	font-size: 11px;
	font-weight: 400;
	word-wrap: break-word;
	white-space: normal;
	word-break: break-word;
	padding-left: 5px;
	transition: all 0.5s;
	position: relative;
	left: 0px;
}
#chat.big .messages div {
	font-size: 14px;
}

#chat .messages div.new {
	left: 100% !important;
	transition: none;
}

#chat .messages div b {
	font-weight: 600;
}
#chat .messages div:nth-child(even) {
	background: rgba(0,0,0,0.025);
}
#chat .messages div.join,
#chat .messages div.disc,
#chat .messages div.play,
#chat .messages div.load,
#chat .messages div.pause,
#chat .messages div.rewind {
	color: white;
	text-align: center;
	border-radius: 4px;
	margin: 3px;
}
#chat .messages div.join {
	background: #8e44ad;
}
#chat .messages div.disc {
	background: #34495e;
}
#chat .messages div.rewind {
	background: #16a085;
}
#chat .messages div.load {
	background: #2980b9;
}
#chat .messages div.pause {
	background: #e67e22;
}
#chat .messages div.play {
	background: #1f9c3b;
}

#chat .messages div img {    
	height: 20px;
	vertical-align: top;
	margin: -2px 1px;
	transition: all 0.25s;
	z-index: 100;
}
#chat .messages div img:hover {
	padding: 5px;
	z-index: 101;
	margin: -7px -4px;
	background: white;
	border-radius: 4px;
	transform: scale(2);
	box-shadow: 0px 0px 20px rgba(0,0,0,0.35);
}
#chat.big .messages div img {
	height: 25px;
}
#chat .messages div ul {
	padding: 0px;
	margin: 0px;
	padding-left: 20px;
}

#chat input {
	background: #e5e5e5;
	color: #333;
	font-weight: 400;
	font-size: 11px;
	width: 100%;
	box-sizing: border-box;
	padding: 5px 8px;
	border-radius: 0px 0px 3px 3px;
	border: 1px solid rgba(0,0,0,0.05);
}


#chat .messages::-webkit-scrollbar {
	width: 6px;
}
#chat .messages::-webkit-scrollbar-track {
	background: transparent;
	transition: all 0.5s;
}
#chat .messages::-webkit-scrollbar-thumb {
	background: transparent;
}
#chat .messages:hover::-webkit-scrollbar-track {
	background: rgba(0, 0, 0, 0.05);
}
#chat .messages:hover::-webkit-scrollbar-thumb {
	background: rgba(0, 0, 0, 0.15);
}


@keyframes message {
	0%: {
		left: 100%;
	}
	100%: {
		left: 0%;
	}	
}




#playlist {
	width: 220px;
	height: 32px;
	position: fixed;
	left: 10px;
	bottom: 10px;
	background: white;
	box-shadow: 0px 0px 50px rgba(0,0,0,0.35);
	border-radius: 4px;
	padding: 5px;
	transition: all 0.5s;
	text-align: center;
	overflow: hidden;
	z-index: 100;
}
#playlist.active {
	height: 320px;
}
#playlist .header {
	margin: -5px;
	padding: 10px;
	color: white;
	background: #2c3e50;
	cursor: pointer;
	z-index: 10;
	position: relative;
	box-sizing: border-box;
	margin-bottom: 5px;
}
body.dark #playlist {
	background: rgb(35, 35, 35);
	color: white;
}
body.dark #playlist .header {
	background: #151515;
}
#playlist .list {
	height: 86%;
}
#playlist .list .item {
	font-size: 10px;
	padding: 5px;
	border: 1px solid rgba(0,0,0,0.05);
	cursor: pointer;
	position: relative;
	transition: all 0.5s;
	margin-bottom: 5px;
	z-index: 100;
}
/* ... */

